correcion lab 2 terminado

--- a/fundamentos_de_phyton.ipynb
+++ b/fundamentos_de_phyton.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOFlDhYrQNlKl9/wmgcuXLW",
+      "authorship_tag": "ABX9TyM931uGj6UXC5QBok/6RH6J",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1079,12 +1079,12 @@
       ],
       "metadata": {
         "id": "liwdBlR4tq-F",
-        "outputId": "4d74475e-eb65-40e9-ec54-68f3591bfe6b",
+        "outputId": "9a3ae010-08a6-4f19-9fcf-416c795c9a11",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -1222,24 +1222,28 @@
       ],
       "metadata": {
         "id": "LwHTzZr7xGNn",
-        "outputId": "6614d0f8-3472-4d20-fddc-a9b4d952e5a6",
+        "outputId": "d447a5a8-1bab-4c67-f3cd-474de354dfc4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Ingresa la cantidad de meses: 6\n",
+            "Ingresa la cantidad de meses: 10\n",
             "Mes 1: 1\n",
             "Mes 2: 3\n",
             "Mes 3: 6\n",
             "Mes 4: 10\n",
             "Mes 5: 15\n",
-            "Mes 6: 21\n"
+            "Mes 6: 21\n",
+            "Mes 7: 28\n",
+            "Mes 8: 36\n",
+            "Mes 9: 45\n",
+            "Mes 10: 55\n"
           ]
         }
       ]
@@ -1259,11 +1263,11 @@
         "conversor={\n",
         "\"Monedas\":{\"Dolares\":1, \"Euros\":0.90, \"Colones Salvadoreños\":8.76,  \"Córdobas\":36.84, \"Lempiras\":24.80,  \"Libras esterlinas\":0.77, \"Yenes\":145.95, \"Pesos mexicanos\":19.01, \"Quetzales\":7.75, \"Pesos argentinos\":943.75},\n",
         "\"Longitud\":{\"Metros\":1,\"Centímetros\":100,\"Milímetros\":1000,\"Micrómetros\":1000000,\"Nanómetros\":1000000000,\"Kilómetros\":1/1000,\"Millas\":1/1609,\"Pulgadas\":3.281*12,\"Pies\":3.281,\"Yardas\":3.281/3},\n",
-        "\"Masa\":{\"Kilogramos\":1,\"Gramos\":1000,\"Miligramos\":10**3,\"Microgramos\":10**6,\"Libras\":2.20462,\"Onzas\":2.20462/16,\"Stones\":2.20462/14,\"Toneladas\":1/1000,\"Toneladas largas\":1/1016,\"Toneladas cortas\":2.20462/2000,},\n",
+        "\"Masa\":{\"Kilogramos\":1,\"Gramos\":1000,\"Miligramos\":10**3,\"Microgramos\":10**6,\"Libras\":2.20462,\"Onzas\":2.20462*16,\"Stones\":2.20462/14,\"Toneladas\":1/1000,\"Toneladas largas\":1/1016,\"Toneladas cortas\":2.20462/2000,},\n",
         "\"Almacenamiento\":{\"Bits\":1,\"Bytes\":8,\"Kilobytes\":8/1000,\"Megabytes\":8/10**6,\"Gigabytes\":8/10**9,\"Terabytes\":8/10**12,\"Kibibytes\":8/1024,\"Mebibytes\":8/1024**2,\"Gibibytes\":8/1024**3,\"Tebibytes\":8/1024**4},\n",
         "\"Tiempo\":{\"Microsegundos\":3600*10**6,\"Milisegundos\":3600*1000,\"Segundos\":3600,\"Minutos\":60,\"Horas\":1,\"Días\":1/24,\"Semanas\":1/(24*7),\"Meses\":1/(24*30),\"Años\":1/(24*365),\"Décadas\":1/(24*365*10),\"Siglos\":1/(24*365*100)},\n",
         "\"Volúmen\":{\"Litros\":1,\"Mililitros\":1000,\"Galones\":1/3.7854,\"Cuartos\":4/3.7854,\"Pintas\":8/3.7854,\"Tazas\":1000/240,\"Onzas\":128/3.7854,\"Cucharadas\":256/3.7854,\"Cucharaditas\":768/3.7854},\n",
-        "\"Área\":{\"Km cuadrados\":1,\"Hectáreas\":100,\"Metros cuadrados\":10**6,\"Pies cuadrados\":10.764*10**6,\"Yardas cuadradas\":1.196*10**6,\"Acres\":247.105,\"Millas cuadradas\":0.386102,\"Pulgadas cuadradas\":1.55*10**9,\"Manzanas\":1.43083,\"Tareas\":1590.3307},\n",
+        "\"Área\":{\"Km cuadrados\":1,\"Hectáreas\":100,\"Metros cuadrados\":10**6,\"Pies cuadrados\":10.764*10**6,\"Yardas cuadradas\":1.196*10**6,\"Acres\":247.105,\"Millas cuadradas\":0.386102,\"Pulgadas cuadradas\":1.55*10**9,\"Manzanas\":143.0828,\"Tareas\":143.0828*16},\n",
         "}\n",
         "\n",
         "def mostrar_magnitudes():\n",
@@ -1313,13 +1317,13 @@
         "convertir(magnitud,de,a,cantidad)"
       ],
       "metadata": {
-        "id": "UVNx2qWtELBk",
-        "outputId": "c0cab0c0-dfac-4dc6-886f-f30de6025aec",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "UVNx2qWtELBk",
+        "outputId": "94bc8c7b-fcb1-4836-b26a-e85a921d441d"
       },
-      "execution_count": 5,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -1333,22 +1337,24 @@
             "-Tiempo\n",
             "-Volúmen\n",
             "-Área\n",
-            "Ingresa que quieres convertir: Monedas\n",
-            "Unidades de Monedas:\n",
-            "-Dolares\n",
-            "-Euros\n",
-            "-Colones Salvadoreños\n",
-            "-Córdobas\n",
-            "-Lempiras\n",
-            "-Libras esterlinas\n",
-            "-Yenes\n",
-            "-Pesos mexicanos\n",
-            "-Quetzales\n",
-            "-Pesos argentinos\n",
-            "Convertir de: Dolares\n",
-            "Convertir a: Euros\n",
-            "Cantidad:100\n",
-            "100.0 Dolares equivalen a 90.0 Euros\n"
+            "Ingresa que quieres convertir: Área\n",
+            "Unidades de Área:\n",
+            "-Km cuadrados\n",
+            "-Hectáreas\n",
+            "-Metros cuadrados\n",
+            "-Pies cuadrados\n",
+            "-Yardas cuadradas\n",
+            "-Acres\n",
+            "-Millas cuadradas\n",
+            "-Pulgadas cuadradas\n",
+            "-Manzanas\n",
+            "-Tareas\n",
+            "Convertir de: Manzana\n",
+            "La unidad Manzana no está disponible en Área\n",
+            "Convertir de: Manzanas\n",
+            "Convertir a: Tareas\n",
+            "Cantidad:1\n",
+            "1.0 Manzanas equivalen a 16.0 Tareas\n"
           ]
         }
       ]
@@ -2024,11 +2030,11 @@
         "    print(\"No es palindrome\")"
       ],
       "metadata": {
-        "id": "3Na7GjvA6rBs",
-        "outputId": "e092e891-1291-41c5-edb5-a1725e1e62d2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3Na7GjvA6rBs",
+        "outputId": "e092e891-1291-41c5-edb5-a1725e1e62d2"
       },
       "execution_count": 12,
       "outputs": [
