--- a/fundamentos_de_phyton.ipynb
+++ b/fundamentos_de_phyton.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM931uGj6UXC5QBok/6RH6J",
+      "authorship_tag": "ABX9TyOd2jk794FKnkaCw0dd0fX0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1084,7 +1084,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1175,7 +1175,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1227,7 +1227,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1323,7 +1323,7 @@
         "id": "UVNx2qWtELBk",
         "outputId": "94bc8c7b-fcb1-4836-b26a-e85a921d441d"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1433,7 +1433,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1926,7 +1926,7 @@
       "metadata": {
         "id": "npSF3__OsdO8"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1962,7 +1962,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2036,7 +2036,7 @@
         "id": "3Na7GjvA6rBs",
         "outputId": "e092e891-1291-41c5-edb5-a1725e1e62d2"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2044,6 +2044,223 @@
           "text": [
             "Ingresa una palabra: oso\n",
             "Es palindrome\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**PARCIAL 1** **28/08/24**"
+      ],
+      "metadata": {
+        "id": "iU_IGndyJe0Q"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**EJERCICIO 1: Desarrolle un algoritmo en Python que calcule el IMPUESTO A LAS\n",
+        "ACTIVIDADES ECONOMICAS de acuerdo con la siguiente tabla. El monto\n",
+        "de la actividad económica debe ser introducido por el usuario. (40%)**"
+      ],
+      "metadata": {
+        "id": "WHJbinlQJvZP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tabla_impuestos = [\n",
+        "    {\"desde\": 0.01, \"hasta\": 500, \"precio\": 1.5, \"adicional\": 0},\n",
+        "    {\"desde\": 500.01, \"hasta\": 1000, \"precio\": 1.5, \"adicional\": 3},\n",
+        "    {\"desde\": 1000.01, \"hasta\": 2000, \"precio\": 3, \"adicional\": 3},\n",
+        "    {\"desde\": 2000.01, \"hasta\": 3000, \"precio\": 6, \"adicional\": 3},\n",
+        "    {\"desde\": 3000.01, \"hasta\": 8000, \"precio\": 9, \"adicional\": 3},\n",
+        "    {\"desde\": 8000.01, \"hasta\": 18000, \"precio\": 12, \"adicional\": 2},\n",
+        "    {\"desde\": 18000.01, \"hasta\": 30000, \"precio\": 39, \"adicional\": 2},\n",
+        "    {\"desde\": 30000.01, \"hasta\": 40000, \"precio\": 63, \"adicional\": 2},\n",
+        "    {\"desde\": 40000.01, \"hasta\": 100000, \"precio\": 83, \"adicional\": 0.8},\n",
+        "    {\"desde\": 100000.01, \"hasta\": 200000, \"precio\": 125, \"adicional\": 0.7},\n",
+        "    {\"desde\": 200000.01, \"hasta\": 300000, \"precio\": 155, \"adicional\": 0.5},\n",
+        "    {\"desde\": 300000.01, \"hasta\": 400000, \"precio\": 255, \"adicional\": 0.45},\n",
+        "    {\"desde\": 400000.01, \"hasta\": 1000000, \"precio\": 300, \"adicional\": 0.4},\n",
+        "    {\"desde\": 1000000.01, \"hasta\": 2000000, \"precio\": 340, \"adicional\": 0.3},\n",
+        "    {\"desde\": 2000000.01, \"hasta\": 9999999, \"precio\": 480, \"adicional\": 0.18},\n",
+        "]\n",
+        "\n",
+        "monto = float(input(\"Ingrese el monto de la actividad económica: \"))\n",
+        "\n",
+        "impuesto = 0\n",
+        "for rango in tabla_impuestos:\n",
+        "    if rango[\"desde\"] <= monto <= rango[\"hasta\"]:\n",
+        "        excedente = monto - rango[\"desde\"]\n",
+        "        impuesto = rango[\"precio\"] + (excedente / 1000) * rango[\"adicional\"]\n",
+        "        break\n",
+        "\n",
+        "print(f\"El impuesto a pagar es: ${impuesto:.2f}\")"
+      ],
+      "metadata": {
+        "id": "dbhSh0-yJ3wm",
+        "outputId": "6966b9a7-784b-48e9-baf6-a4b675fc162a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese el monto de la actividad económica: 10\n",
+            "El impuesto a pagar es: $1.50\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Desarrolle el conversor de Área (Superficie) haciendo uso de los\n",
+        "diccionarios y las funciones de usuario en Python que contenga las\n",
+        "siguientes opciones: (30%)**"
+      ],
+      "metadata": {
+        "id": "lUzocc2aTkui"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "conversor={\n",
+        "\"Area\":{\"Hectáreas\":100,\"Metros cuadrados\":10**6,\"Pies cuadrados\":10.764*10**6,\"Yardas cuadradas\":1.196*10**6,\"Pulgadas cuadradas\":1.55*10**9,\"Manzanas\":143.0828,\"Tareas\":143.0828*16, \"Vara Cuadrada\":0.836}\n",
+        "}\n",
+        "\n",
+        "def mostrar_unidades(magnitud):\n",
+        "    print(f\"Unidades de {magnitud}:\")\n",
+        "    for u in conversor[magnitud].keys():\n",
+        "        print(f\"-{u}\")\n",
+        "\n",
+        "\n",
+        "def obtener_unidad(magnitud,tipo):\n",
+        "    unidad = input(f\"Convertir {tipo}: \")\n",
+        "    if unidad not in conversor[magnitud]:\n",
+        "        print(f\"La unidad {unidad} no está disponible en {magnitud}\")\n",
+        "        return obtener_unidad(magnitud,tipo)\n",
+        "    return unidad\n",
+        "\n",
+        "def obtener_magnitud():\n",
+        "    magnitud=input(\"Ingresa que quieres convertir: \")\n",
+        "    if magnitud not in conversor.keys():\n",
+        "        print(f\"La magnitud {magnitud} no está disponible\")\n",
+        "        return obtener_magnitud()\n",
+        "    return magnitud\n",
+        "\n",
+        "def obtener_cantidad():\n",
+        "    try :\n",
+        "        cantidad = float(input(\"Cantidad:\"))\n",
+        "    except:\n",
+        "        print(\"Debes ingresar un numero\")\n",
+        "        return obtener_cantidad()\n",
+        "    return cantidad\n",
+        "\n",
+        "def convertir(magnitud,de,a,cantidad):\n",
+        "    res=cantidad*conversor[magnitud][a]/conversor[magnitud][de]\n",
+        "    print(f\"{cantidad} {de} equivalen a {res} {a}\")\n",
+        "\n",
+        "mostrar_magnitudes()\n",
+        "magnitud = obtener_magnitud()\n",
+        "mostrar_unidades(magnitud)\n",
+        "de = obtener_unidad(magnitud,\"de\")\n",
+        "a= obtener_unidad(magnitud,\"a\")\n",
+        "cantidad = obtener_cantidad()\n",
+        "convertir(magnitud,de,a,cantidad)"
+      ],
+      "metadata": {
+        "id": "k3dbtNFaSp_U",
+        "outputId": "a3602de7-af35-4de6-be68-6ae944658c33",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Magnitud disponible:\n",
+            "- Area\n",
+            "Ingresa que quieres convertir: Area\n",
+            "Unidades de Area:\n",
+            "-Hectáreas\n",
+            "-Metros cuadrados\n",
+            "-Pies cuadrados\n",
+            "-Yardas cuadradas\n",
+            "-Pulgadas cuadradas\n",
+            "-Manzanas\n",
+            "-Tareas\n",
+            "-Vara Cuadrada\n",
+            "Convertir de: Metros cuadrados\n",
+            "Convertir a: Yardas cuadradas\n",
+            "Cantidad:1\n",
+            "1.0 Metros cuadrados equivalen a 1.196 Yardas cuadradas\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Desarrolle un programa en Python que simule a un cajero automático.\n",
+        "Haga uso de las estructuras de control. (30%)**"
+      ],
+      "metadata": {
+        "id": "a2N5aF8iYh-p"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def cajero_automatico(cantidad):\n",
+        "  if cantidad <= 0:\n",
+        "    print(\"Ingrese una cantidad válida.\")\n",
+        "    return\n",
+        "\n",
+        "  billetes = [20, 10, 5, 1]\n",
+        "  monedas = [0.25, 0.10, 0.01]\n",
+        "\n",
+        "  for billete in billetes:\n",
+        "    num_billetes = int(cantidad // billete)\n",
+        "    if num_billetes > 0:\n",
+        "      print(f\"{num_billetes} billetes de a {billete}\")\n",
+        "      cantidad -= num_billetes * billete\n",
+        "\n",
+        "  for moneda in monedas:\n",
+        "    num_monedas = int(cantidad // moneda)\n",
+        "    if num_monedas > 0:\n",
+        "      print(f\"{num_monedas} monedas de {moneda:.2f} ctvs.\")\n",
+        "      cantidad -= num_monedas * moneda\n",
+        "\n",
+        "cantidad = float(input(\"Ingrese la cantidad a retirar: \"))\n",
+        "cajero_automatico(cantidad)"
+      ],
+      "metadata": {
+        "id": "EjY1_Y3NYcpA",
+        "outputId": "5ef3b081-bec9-49e2-bd29-121e849e0cd7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese la cantidad a retirar: 10\n",
+            "1 billetes de a 10\n"
           ]
         }
       ]
